@@ -6,6 +6,14 @@
     <artifactId>simpleapplication</artifactId>
     <version>0.2.0</version>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub SMILEY4 Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/smiley4/simpleapplication</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main-class>de.ruegnerlukas.test.TestApplication</main-class>
@@ -18,8 +26,8 @@
         <javafx-maven-plugin.version>0.0.1</javafx-maven-plugin.version>
         <lombok.version>1.18.10</lombok.version>
         <mapstruct-processor.version>1.3.0.Final</mapstruct-processor.version>
-        <slf4j.version>1.7.29</slf4j.version>
-        <logback-classic.version>1.2.3</logback-classic.version>
+        <slf4j.version>2.0.0-alpha1</slf4j.version>
+        <logback-classic.version>1.3.0-alpha5</logback-classic.version>
         <logback-colorizer.version>1.0.1</logback-colorizer.version>
         <jackson-core.version>2.10.1</jackson-core.version>
         <!-- Tests-->
@@ -151,6 +159,10 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
